clang/test/BSC/Negative/Ownership/Borrow/borrow_define/borrow_define.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
struct R {
   int num;
   int _Borrow p1; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
   const int _Borrow p2; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
};
void f(int _Borrow a); // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
void f1<T>(const int _Borrow a) {} // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
void f2<T>(T * _Borrow a) {}; // legal

void test() {
  int a = 1;
  int _Borrow b1; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
  const int _Borrow b2 = 10; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
  int _Borrow * b3; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
  const int _Borrow * b4; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
  f2<int>(&_Mut a);
}

_Trait F {};
_Trait F1<T> {};
_Impl _Trait F for int * _Borrow; // expected-error {{expected ';' at end of declaration}}
                               // expected-error@-1 {{expected identifier or '('}}
_Impl _Trait F<int> for int * _Borrow; // expected-error {{expected ';' at end of declaration}}
                               // expected-error@-1 {{expected identifier or '('}}
                               // expected-error@-2 {{explicit specialization of undeclared template _Trait 'F'}}